--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div id="img-container-mishmish" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
         <svg width="64" height="64" viewbox="0 0 64 64" fill="none" xmlns="http://www.w3.imgs/images.svg"><rect width="64" height="64" rx="8" fill="#E5E7EB" /> <path d="M32 20L36 28L45 28L38 34L41 42L32 37L23 42L26 34L19 28L28 28L32 20Z" fill="#9CA3AF" />
-               <img src="imgs/images.jpg" alt="hero image" class="heroImg" />
+               <img src="images.jpg" alt="hero image" class="heroImg" />
             </div>
       </div>
       <div class="p-5">
@@ -102,7 +102,7 @@
       <div id="img-container-qarasya" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
         <svg width="64" height="64" viewbox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="64" height="64" rx="8" fill="#E5E7EB" /> <path d="M32 20L36 28L45 28L38 34L41 42L32 37L23 42L26 34L19 28L28 28L32 20Z" fill="#9CA3AF" />
-        <img src="imgs/images (1).jpg" alt="hero image" class="heroImg" />
+        <img src="images (1).jpg" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
@@ -115,7 +115,7 @@
       <div id="img-container-zabib" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
         <svg width="64" height="64" viewbox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="64" height="64" rx="8" fill="#E5E7EB" /> <path d="M32 20L36 28L45 28L38 34L41 42L32 37L23 42L26 34L19 28L28 28L32 20Z" fill="#9CA3AF" />
-        <img src="imgs/images (2).jpg" alt="hero image" class="heroImg" />
+        <img src="images (2).jpg" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
@@ -128,7 +128,7 @@
       <div id="img-container-coconut" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
         <svg width="64" height="64" viewbox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="64" height="64" rx="8" fill="#E5E7EB" /> <path d="M32 20L36 28L45 28L38 34L41 42L32 37L23 42L26 34L19 28L28 28L32 20Z" fill="#9CA3AF" />
-        <img src="imgs/images (3).jpg" alt="hero image" class="heroImg" />
+        <img src="images (3).jpg" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
@@ -141,7 +141,7 @@
       <div id="img-container-majdool" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
         <svg width="64" height="64" viewbox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="64" height="64" rx="8" fill="#E5E7EB" /> <path d="M32 20L36 28L45 28L38 34L41 42L32 37L23 42L26 34L19 28L28 28L32 20Z" fill="#9CA3AF" />
-        <img src="imgs/images (4).jpg" alt="hero image" class="heroImg" />
+        <img src="images (4).jpg" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
@@ -154,7 +154,7 @@
       <div id="img-container-sukari" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
         <svg width="64" height="64" viewbox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="64" height="64" rx="8" fill="#E5E7EB" /> <path d="M32 20L36 28L45 28L38 34L41 42L32 37L23 42L26 34L19 28L28 28L32 20Z" fill="#9CA3AF" />
-        <img src="imgs/images (5).jpg" alt="hero image" class="heroImg" />
+        <img src="images (5).jpg" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
@@ -167,7 +167,7 @@
       <div id="img-container-teen" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
         <svg width="64" height="64" viewbox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="64" height="64" rx="8" fill="#E5E7EB" /> <path d="M32 20L36 28L45 28L38 34L41 42L32 37L23 42L26 34L19 28L28 28L32 20Z" fill="#9CA3AF" />
-        <img src="imgs/images (6).jpg" alt="hero image" class="heroImg" />
+        <img src="images (6).jpg" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
@@ -179,7 +179,7 @@
      <div class="product-card bg-white rounded-2xl shadow-md overflow-hidden">
       <div id="img-container-walnut" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
-        <img src="imgs/images (7).jpg" alt="hero image" class="heroImg" />
+        <img src="images (7).jpg" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
@@ -191,7 +191,7 @@
      <div class="product-card bg-white rounded-2xl shadow-md overflow-hidden">
       <div id="img-container-kharoob" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
-        <img src="imgs/images (8).jpg" alt="hero image" class="heroImg" />
+        <img src="images (8).jpg" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
@@ -204,7 +204,7 @@
       <div id="img-container-ajwa" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
         <svg width="64" height="64" viewbox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="64" height="64" rx="8" fill="#E5E7EB" /> <path d="M32 20L36 28L45 28L38 34L41 42L32 37L23 42L26 34L19 28L28 28L32 20Z" fill="#9CA3AF" />
-        <img src="imgs/images (9).jpg" alt="hero image" class="heroImg" />
+        <img src="images (9).jpg" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
@@ -217,7 +217,7 @@
       <div id="img-container-cashew" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
         <svg width="64" height="64" viewbox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="64" height="64" rx="8" fill="#E5E7EB" /> <path d="M32 20L36 28L45 28L38 34L41 42L32 37L23 42L26 34L19 28L28 28L32 20Z" fill="#9CA3AF" />
-        <img src="imgs/images (13).png" alt="hero image" class="heroImg" />
+        <img src="images (13).png" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
@@ -229,7 +229,7 @@
      <div class="product-card bg-white rounded-2xl shadow-md overflow-hidden">
       <div id="img-container-pistachio" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
-        <img src="imgs/images (14).jpg" alt="hero image" class="heroImg" />
+        <img src="images (14).jpg" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
@@ -242,7 +242,7 @@
       <div id="img-container-peanut" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
         <svg width="64" height="64" viewbox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="64" height="64" rx="8" fill="#E5E7EB" /> <path d="M32 20L36 28L45 28L38 34L41 42L32 37L23 42L26 34L19 28L28 28L32 20Z" fill="#9CA3AF" />
-        <img src="imgs/images (10).jpg" alt="hero image" class="heroImg" />
+        <img src="images (10).jpg" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
@@ -254,7 +254,7 @@
      <div class="product-card bg-white rounded-2xl shadow-md overflow-hidden">
       <div id="img-container-qamar" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
-        <img src="imgs/images (11).jpg" alt="hero image" class="heroImg" />
+        <img src="images (11).jpg" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
@@ -266,7 +266,7 @@
      <div class="product-card bg-white rounded-2xl shadow-md overflow-hidden">
       <div id="img-container-tamarind" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
-        <img src="imgs/images (12).jpg" alt="hero image" class="heroImg" />
+        <img src="images (12).jpg" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
@@ -279,7 +279,7 @@
       <div id="img-container-sobia" class="product-image-container h-48">
        <div class="no-image-placeholder h-full">
         <svg width="64" height="64" viewbox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="64" height="64" rx="8" fill="#E5E7EB" /> <path d="M32 20L36 28L45 28L38 34L41 42L32 37L23 42L26 34L19 28L28 28L32 20Z" fill="#9CA3AF" />
-        <img src="imgs/images (13).jpg" alt="hero image" class="heroImg" />
+        <img src="images (13).jpg" alt="hero image" class="heroImg" />
        </div>
       </div>
       <div class="p-5">
